[gd_scene load_steps=5 format=3 uid="uid://wyehcnibcwfo"]

[ext_resource type="Script" path="res://scripts/character_enemy_bat.gd" id="1_b2x2l"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_0qhsm"]
polygon = PackedVector2Array(-20, -20, -20, 20, 20, 20, 20, -20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nb652"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uef38"]
size = Vector2(40, 40)

[node name="CharacterEnemyBat" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 20
script = ExtResource("1_b2x2l")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.0980392, 0.0980392, 1)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
modulate = Color(0.419813, 0.419813, 0.419813, 1)
light_mask = 24
visibility_layer = 24
position = Vector2(4.76837e-07, 0)
occluder = SubResource("OccluderPolygon2D_0qhsm")
occluder_light_mask = 24

[node name="TimerHitCooldown" type="Timer" parent="."]
wait_time = 1.5

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("RectangleShape2D_nb652")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uef38")

[node name="LabelHealth" type="Label" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 86.0
offset_bottom = 3.0
text = "h:"

[connection signal="timeout" from="TimerHitCooldown" to="." method="_on_timer_hit_cooldown_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
